feat(product-service): refactor ProductServiceMockTest for improved readability and structure